# prediction-wallet

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  brouillon  config.py  dashboard_main.py  deep-research-report (1).md  deep-research-report (2).md  docker-compose.yml  financial_data.db  lstm_model.h5  lstm_multivar_alltickers.h5  main.py  mlflow.db  notes  portfolio_loader.py  pyproject.toml  requete.json  requirements.txt  runtime_context.py  settings.py  start_ui.py
agent/: graph.py  llm.py  nodes.py  prompts.py  state.py  tools.py
agents/: __init__.py  deps.py  models.py  policies.py  portfolio_agent.py
api/: auth.py  main.py  middle_office.py  models.py  runner.py
dashboard/: app.py  backtest.py  data.py  ui.py
data/: AAPL_data.csv  ABT_data.csv  ACN_data.csv  ADBE_data.csv  AMZN_data.csv  BAC_data.csv  BLK_data.csv  BRK-B_data.csv  CMCSA_data.csv  COST_data.csv  CRM_data.csv  CVX_data.csv  DIS_data.csv  GOOGL_data.csv  HD_data.csv  HON_data.csv  IBM_data.csv  INTC_data.csv  JNJ_data.csv  JPM_data.csv  KO_data.csv  LIN_data.csv  LLY_data.csv  LOW_data.csv  MA_data.csv  MCD_data.csv  MDT_data.csv  META_data.csv  MRK_data.csv  MSFT_data.csv  NEE_data.csv  NFLX_data.csv  NKE_data.csv  NVDA_data.csv  ORCL_data.csv  PEP_data.csv  PFE_data.csv  PG_data.csv  PM_data.csv  QCOM_data.csv  (+11 more)
db/: __init__.py  connection.py  events.py  repository.py  schema.py
docs/: GOVERNANCE.md  INDEX.md  OPERATIONS.md  RISK_MODEL.md  SECURITY.md  TRADING_CORE.md  api.md
engine/: __init__.py  backtest.py  backtest_v2.py  hedge_fund.py  monte_carlo.py  orders.py  performance.py  portfolio.py  projection.py  regime.py  risk.py  stress_testing.py
execution/: kill_switch.py  persistence.py  simulator.py  types.py
frontend/: package-lock.json  package.json  vite.config.ts
market/: fetcher.py  metrics.py
ml/: alpha_factory.py  research_pipeline.py  sentiment_service.py
models/: AAPL_arima.joblib  AAPL_lstm.h5  AAPL_prophet.joblib  AMZN_arima.joblib  AMZN_lstm.h5  AMZN_prophet.joblib  GOOGL_arima.joblib  GOOGL_lstm.h5  GOOGL_prophet.joblib  META_arima.joblib  META_lstm.h5  META_prophet.joblib  MSFT_arima.joblib  MSFT_lstm.h5  MSFT_prophet.joblib
prisma/: schema.prisma
profiles/: balanced.yaml  conservative.yaml  crypto_heavy.yaml  growth.yaml  long_short_equity.yaml
reporting/: pdf_report.py
results/: optimal_weights.csv  portfolio_metrics.csv
scripts/: setup.sh
services/: __init__.py  agent_runtime.py  back_office_service.py  data_lake_service.py  execution_service.py  feature_service.py  gateways.py  governance_service.py  health_service.py  idea_book_service.py  market_service.py  middle_office_service.py  ml_trainer_service.py  mlflow_service.py  news_service.py  notebook_kernel_service.py  notebook_service.py  reporting_service.py  research_service.py  trading_core_service.py
src/: ARIMA.py  LSTM.py  PROPHET.py  data_collection.py  data_eda.py  generate_model.py  predict.py
strategies/: __init__.py  base.py  calendar.py  ensemble.py  predictive_ml.py  threshold.py
tests/: test_api_contracts.py  test_auth.py  test_back_office.py  test_backtest_v2.py  test_data_lake.py  test_db_connection.py  test_engine.py  test_ensemble_strategy.py  test_hardening.py  test_hedge_fund.py  test_iam_fondation.py  test_idea_book_service.py  test_market_data.py  (+14 more)
(+283 files in other folders)
