[project]
name = "prediction-wallet"
version = "1.0.0"
description = "AI-governed portfolio rebalancing agent with deterministic policy validation and audit trails"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rayan Barreddine", email = "rayan.barreddine@gmail.com" }]
keywords = ["portfolio", "AI", "finance", "rebalancing", "pydantic-ai", "governance"]
requires-python = ">=3.13"
dependencies = [
    # Core AI / Agent
    "pydantic-ai>=1.0.10",
    "google-genai>=1.31.0",
    "anthropic>=0.61.0",
    # Data
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    # Reporting
    "reportlab>=4.0.0",
    # API / UI
    "fastapi>=0.135.2",
    "uvicorn>=0.30.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "prisma[node]>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
